tests/errors/first_stage/.define/name_taken/name_taken.as
; defining two constants with the same name
.define a = 2
.define a = 4